[package]
name = "runtime"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw.workspace = true
anyhow.workspace = true
ash.workspace = true
ash-window.workspace = true
raw-window-handle.workspace = true

[features]
default = ["validation_layers"]
validation_layers = []